@@ -103,13 +103,13 @@ tasks.named("run") {
         jvmArgs = ["-ea",                       // -ea enables assertions
                    "--enable-preview",          // enable Java preview features
                    "--module-path", layout.projectDirectory.dir("mods/lib").asFile.absolutePath,
-                   "--add-modules", "javafx.controls,javafx.web,javafx.swing,javafx.fxml,javafx.graphics"
+                   "--add-modules", "javafx.controls,javafx.web,javafx.swing,javafx.fxml,javafx.graphics",
+                   "--enable-native-access", "javafx.graphics,javafx.web" // JDK-8347744
         ]
     }
 }
 
 tasks.named("installDist") {
-    dependsOn createExe
     doLast{
         delete {
             delete fileTree(layout.buildDirectory.dir("install/pcgen/lib")) {
@@ -117,14 +117,6 @@ tasks.named("installDist") {
             }
         }
     }
-}
-
-tasks.named("distTar") {
-    dependsOn createExe
-}
-
-tasks.named("distZip") {
-    dependsOn createExe
 }
 
 tasks.register("testZip", Zip) {
@@ -158,7 +150,7 @@ tasks.register("docsZip", Zip) {
 }
 
 tasks.register("programZip", Zip) {
-    dependsOn converterJar, createExe
+    dependsOn converterJar
     archiveClassifier.set('program')
     into(zipRootFolder) {
         with programDistsImage
